--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #0fb3ec; }
+  background: #04490e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #3024d2; }
+  background: #c8cb22; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #bc0240; }
+  background: #b317ff; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #efaffd; }
+  background: #1d22ae; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #b24c09; }
+  background: #0e40c2; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #753544; }
+  background: #34e5f3; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #65cc05; }
+  background: #f3526f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #311781; }
+  background: #c00fef; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #eba2bd; }
+  background: #7e8a53; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #0e4442; }
+  background: #24aed1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #4e4034; }
+  background: #ad92f1; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #24a215; }
+  background: #44187d; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c8de11; }
+  background: #684175; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a5dd64; }
+  background: #a1c6fc; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #8a61b9; }
+  background: #406f71; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ecf85c; }
+  background: #3788c0; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f377e4; }
+  background: #8bf358; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #7c38be; }
+  background: #ff6316; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #fb2277; }
+  background: #07448b; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #86595e; }
+  background: #9c3fea; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #9e9aee; }
+  background: #537b2f; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ce7371; }
+  background: #a6c08b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #ac9275; }
+  background: #071bfa; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #9c3ac2; }
+  background: #c98cd9; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e09e54; }
+  background: #033ea7; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #5ce94d; }
+  background: #ab9786; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #71ae66; }
+  background: #c52232; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5633ee; }
+  background: #4c833b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #494b0b; }
+  background: #357565; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #6840aa; }
+  background: #a524c0; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2c6c89; }
+  background: #499fc1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #cde4e0; }
+  background: #e6ce47; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #da9243; }
+  background: #3b8fe6; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #c630cf; }
+  background: #7759c5; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #d3acad; }
+  background: #86211d; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f002c7; }
+  background: #f1174f; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #e2aae1; }
+  background: #e0f701; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #d9afcb; }
+  background: #c4199c; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #a55e94; }
+  background: #a5c9f6; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #9d36db; }
+  background: #7d1ca2; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #fd2845; }
+  background: #4342e3; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #f22f57; }
+  background: #3e43cd; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #7c8d76; }
+  background: #1f0821; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #6fea16; }
+  background: #867c67; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #31c2c5; }
+  background: #44095c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #1bcb93; }
+  background: #800607; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #9b30a1; }
+  background: #b594a4; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #6501dd; }
+  background: #297a95; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #80f254; }
+  background: #a44fab; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #26ed54; }
+  background: #405f92; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #48d968; }
+  background: #b0939b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c9c35a; }
+  background: #6fa7dc; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #b8c21a; }
+  background: #73eba0; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #e3e414; }
+  background: #16b149; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #73c419; }
+  background: #9e4cf5; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #28424c; }
+  background: #a5d190; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #d79761; }
+  background: #c89025; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #63ae80; }
+  background: #d7ca74; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #6d5066; }
+  background: #8ce97a; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f8f9aa; }
+  background: #0416fe; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #2017b9; }
+  background: #4377e6; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #01fcf7; }
+  background: #02f1e4; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #ee6406; }
+  background: #5c1e79; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #754539; }
+  background: #96dd96; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #4aa6d7; }
+  background: #4db426; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #54906e; }
+  background: #436459; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #304f8c; }
+  background: #781f6e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #74d025; }
+  background: #b3a179; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #10b0a6; }
+  background: #97290d; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #0f0c5a; }
+  background: #dd5965; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #f94720; }
+  background: #2c15c0; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #285aab; }
+  background: #9cfc9f; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a19ce8; }
+  background: #4dfac7; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #dc50ca; }
+  background: #4efdca; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #c4c3ff; }
+  background: #feea0c; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #1dd324; }
+  background: #b025e7; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #84a8a6; }
+  background: #91b3e4; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #e969c7; }
+  background: #cfc95f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #b1cfbf; }
+  background: #3c16ee; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #29f0ac; }
+  background: #5f160c; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #cc6992; }
+  background: #09aae5; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #94ea65; }
+  background: #4487c1; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #0b594a; }
+  background: #7889f6; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #ce8052; }
+  background: #a5b256; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #8433a7; }
+  background: #252ede; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #8b68c9; }
+  background: #118c91; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ccf5db; }
+  background: #a7d995; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #806958; }
+  background: #3fa10e; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #cee903; }
+  background: #42d5a7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #bfc8ba; }
+  background: #1f3814; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d8762e; }
+  background: #3e6f6f; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #cbbadf; }
+  background: #47a1fb; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ea653b; }
+  background: #e8495d; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #582866; }
+  background: #eff324; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #8e79be; }
+  background: #5e5607; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #710914; }
+  background: #1b077f; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #10d327; }
+  background: #e125cb; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #dcb25b; }
+  background: #607376; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a78983; }
+  background: #0c0fd2; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e5d55e; }
+  background: #523c57; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12529,7 +12529,7 @@ td .check-container {
 
 .dropdown-menu1 {
   top: 8px;
-  right: -34px;
+  right: -65px;
   left: unset;
   width: 430px;
   box-shadow: 0px 5px 7px -1px #c1c1c1;
@@ -12545,20 +12545,21 @@ td .check-container {
   content: "";
   position: absolute;
   top: -20px;
-  right: 12px;
+  right: 43px;
   border: 10px solid #56bcd9;
   border-color: transparent transparent #56bcd9 transparent; }
 
 .head {
-  padding: 15px;
-  border-radius: 8px 8px 0px 0px;
+  padding: 13px 15px;
+  border-radius: 6px 6px 0px 0px;
   background: #56bcd9; }
   .head a {
     margin: 0px; }
 
 .notification-box {
   background: #fff;
-  padding: 10px; }
+  padding: 10px;
+  padding-bottom: 0px; }
   .notification-box .row-info {
     align-items: center;
     display: flex;
@@ -12570,7 +12571,8 @@ td .check-container {
   cursor: pointer; }
   .flex-1 .text-info {
     color: #000 !important;
-    font-size: 14px; }
+    font-size: 14px;
+    line-height: 24px; }
   .flex-1 .subline-text {
     font-size: 13px; }
 
@@ -12579,6 +12581,22 @@ td .check-container {
   .notification-box-gray .text-info,
   .notification-box-gray .subline-text {
     color: #808080 !important; }
+
+.c-red-notification {
+  padding: 3px;
+  background: #f00f00;
+  border-radius: 100%;
+  display: block;
+  width: 6px;
+  height: 6px; }
+
+.c-gray-notification {
+  padding: 3px;
+  background: #f00f00;
+  border-radius: 100%;
+  display: block;
+  width: 6px;
+  height: 6px; }
 
 .footer {
   padding: 5px 15px;
