--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2165,7 +2165,7 @@ td {
 
 .dropdown-menu1 {
   top: 8px;
-  right: -34px;
+  right: -65px;
   left: unset;
   width: 430px;
   box-shadow: 0px 5px 7px -1px #c1c1c1;
@@ -2183,14 +2183,14 @@ td {
   content: "";
   position: absolute;
   top: -20px;
-  right: 12px;
+  right: 43px;
   border: 10px solid #56bcd9;
   border-color: transparent transparent #56bcd9 transparent;
 }
 
 .head {
-  padding: 15px;
-  border-radius: 8px 8px 0px 0px;
+  padding: 13px 15px;
+  border-radius: 6px 6px 0px 0px;
   background: #56bcd9;
 
   a {
@@ -2201,6 +2201,7 @@ td {
 .notification-box {
   background: #fff;
   padding: 10px;
+  padding-bottom: 0px;
 
   .row-info {
     align-items: center;
@@ -2217,6 +2218,7 @@ td {
   .text-info {
     color: #000 !important;
     font-size: 14px;
+    line-height: 24px;
   }
 
   .subline-text {
@@ -2232,6 +2234,24 @@ td {
   .subline-text {
     color: #808080 !important;
   }
+}
+
+.c-red-notification {
+  padding: 3px;
+  background: #f00f00;
+  border-radius: 100%;
+  display: block;
+  width: 6px;
+  height: 6px;
+}
+
+.c-gray-notification {
+  padding: 3px;
+  background: #f00f00;
+  border-radius: 100%;
+  display: block;
+  width: 6px;
+  height: 6px;
 }
 
 .footer {
