--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #04490e; }
+  background: #d367a6; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c8cb22; }
+  background: #7947b3; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b317ff; }
+  background: #f36bb1; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #1d22ae; }
+  background: #8193b7; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #0e40c2; }
+  background: #f019d8; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #34e5f3; }
+  background: #f1a2e2; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f3526f; }
+  background: #022742; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c00fef; }
+  background: #f6cef2; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #7e8a53; }
+  background: #b4fefb; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #24aed1; }
+  background: #573c41; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ad92f1; }
+  background: #b45284; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #44187d; }
+  background: #46469e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #684175; }
+  background: #f27b8b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a1c6fc; }
+  background: #e57158; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #406f71; }
+  background: #e2e3a8; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3788c0; }
+  background: #870539; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #8bf358; }
+  background: #7dbeb6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ff6316; }
+  background: #0ba21e; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #07448b; }
+  background: #ce02c2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #9c3fea; }
+  background: #e28ea5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #537b2f; }
+  background: #97198b; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #a6c08b; }
+  background: #57e769; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #071bfa; }
+  background: #2bbbff; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #c98cd9; }
+  background: #9ab9d4; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #033ea7; }
+  background: #3adeaa; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #ab9786; }
+  background: #9a22f9; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c52232; }
+  background: #522212; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #4c833b; }
+  background: #136174; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #357565; }
+  background: #a8ea73; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a524c0; }
+  background: #2db949; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #499fc1; }
+  background: #0c2dc5; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #e6ce47; }
+  background: #5da623; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3b8fe6; }
+  background: #bd8dba; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #7759c5; }
+  background: #8e7c4e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #86211d; }
+  background: #7bf3ed; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f1174f; }
+  background: #fbecdf; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #e0f701; }
+  background: #f1bc21; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c4199c; }
+  background: #3f226b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #a5c9f6; }
+  background: #a844c8; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #7d1ca2; }
+  background: #d52479; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #4342e3; }
+  background: #80aec7; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #3e43cd; }
+  background: #b4e064; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #1f0821; }
+  background: #37f777; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #867c67; }
+  background: #919ec1; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #44095c; }
+  background: #95a79d; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #800607; }
+  background: #928de8; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b594a4; }
+  background: #ed6f21; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #297a95; }
+  background: #aafeb8; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a44fab; }
+  background: #30b956; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #405f92; }
+  background: #10d2fa; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b0939b; }
+  background: #f199e5; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #6fa7dc; }
+  background: #756ca4; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #73eba0; }
+  background: #4de2ce; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #16b149; }
+  background: #de56fa; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #9e4cf5; }
+  background: #5706f6; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a5d190; }
+  background: #2a5c03; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c89025; }
+  background: #4d8570; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d7ca74; }
+  background: #738a06; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #8ce97a; }
+  background: #161bfb; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0416fe; }
+  background: #f69cc3; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #4377e6; }
+  background: #b2c9d3; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #02f1e4; }
+  background: #64c231; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #5c1e79; }
+  background: #2a11c1; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #96dd96; }
+  background: #c551ec; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #4db426; }
+  background: #bc71b5; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #436459; }
+  background: #be4755; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #781f6e; }
+  background: #7134d7; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b3a179; }
+  background: #77f2e7; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #97290d; }
+  background: #704a8e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #dd5965; }
+  background: #ef7960; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #2c15c0; }
+  background: #ffd027; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #9cfc9f; }
+  background: #ba78cf; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #4dfac7; }
+  background: #65d626; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4efdca; }
+  background: #8c4039; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #feea0c; }
+  background: #b8594a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b025e7; }
+  background: #53287e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #91b3e4; }
+  background: #156cbb; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #cfc95f; }
+  background: #6a9326; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #3c16ee; }
+  background: #7190b9; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #5f160c; }
+  background: #eade14; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #09aae5; }
+  background: #94f3e7; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #4487c1; }
+  background: #385873; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #7889f6; }
+  background: #835d23; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #a5b256; }
+  background: #c1f65d; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #252ede; }
+  background: #7fb4e4; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #118c91; }
+  background: #0d824c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a7d995; }
+  background: #11da60; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #3fa10e; }
+  background: #d4ec96; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #42d5a7; }
+  background: #e5ebc5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #1f3814; }
+  background: #1836f9; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #3e6f6f; }
+  background: #7eb774; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #47a1fb; }
+  background: #6fe984; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #e8495d; }
+  background: #40d832; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #eff324; }
+  background: #32dfd8; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5e5607; }
+  background: #d5c59f; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #1b077f; }
+  background: #c0a369; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #e125cb; }
+  background: #4327a4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #607376; }
+  background: #8a5465; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #0c0fd2; }
+  background: #0ccdec; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #523c57; }
+  background: #b68f65; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12563,7 +12563,8 @@ td .check-container {
   .notification-box .row-info {
     align-items: center;
     display: flex;
-    justify-content: space-between; }
+    justify-content: space-between;
+    padding: 0px 10px; }
 
 .flex-1 {
   flex: 1;
