--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2248,7 +2248,7 @@ td {
 
 .c-gray-notification {
   padding: 3px;
-  background: #f00f00;
+  background: #808080;
   border-radius: 100%;
   display: block;
   width: 6px;
