--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d367a6; }
+  background: #1dbc22; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7947b3; }
+  background: #412b3e; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f36bb1; }
+  background: #52a04a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8193b7; }
+  background: #499a7a; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f019d8; }
+  background: #e425a4; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f1a2e2; }
+  background: #39e372; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #022742; }
+  background: #45a87e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f6cef2; }
+  background: #28b8ec; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b4fefb; }
+  background: #ca190b; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #573c41; }
+  background: #b0fec8; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #b45284; }
+  background: #85222b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #46469e; }
+  background: #a954d1; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #f27b8b; }
+  background: #f667a9; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e57158; }
+  background: #53457c; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e2e3a8; }
+  background: #2581a2; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #870539; }
+  background: #33b52d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #7dbeb6; }
+  background: #2376d0; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #0ba21e; }
+  background: #45361c; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ce02c2; }
+  background: #add75f; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #e28ea5; }
+  background: #de4eb0; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #97198b; }
+  background: #7c7d61; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #57e769; }
+  background: #f61ff0; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #2bbbff; }
+  background: #0cf308; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #9ab9d4; }
+  background: #4a0623; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #3adeaa; }
+  background: #087933; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9a22f9; }
+  background: #7cb4b4; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #522212; }
+  background: #2ea6be; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #136174; }
+  background: #a94c16; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #a8ea73; }
+  background: #3049f5; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #2db949; }
+  background: #2e3102; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #0c2dc5; }
+  background: #a99af1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #5da623; }
+  background: #35b863; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #bd8dba; }
+  background: #3b0426; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #8e7c4e; }
+  background: #d0112a; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #7bf3ed; }
+  background: #f468d3; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #fbecdf; }
+  background: #26181b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f1bc21; }
+  background: #23cd3d; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #3f226b; }
+  background: #305124; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #a844c8; }
+  background: #91d858; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d52479; }
+  background: #98f123; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #80aec7; }
+  background: #f9b321; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b4e064; }
+  background: #e1b27f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #37f777; }
+  background: #ca283f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #919ec1; }
+  background: #065176; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #95a79d; }
+  background: #6b3c0b; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #928de8; }
+  background: #b2a850; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #ed6f21; }
+  background: #63f19b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #aafeb8; }
+  background: #d72c77; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #30b956; }
+  background: #a6dd37; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #10d2fa; }
+  background: #50e98e; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #f199e5; }
+  background: #637387; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #756ca4; }
+  background: #2e0f28; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #4de2ce; }
+  background: #2d92d4; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #de56fa; }
+  background: #9a8aed; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5706f6; }
+  background: #c5e13c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2a5c03; }
+  background: #9e73d5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4d8570; }
+  background: #a980d8; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #738a06; }
+  background: #ed12c9; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #161bfb; }
+  background: #235c6d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f69cc3; }
+  background: #e67545; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b2c9d3; }
+  background: #cf2123; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #64c231; }
+  background: #4c0291; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #2a11c1; }
+  background: #9ddbfa; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c551ec; }
+  background: #7ce806; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #bc71b5; }
+  background: #ac6332; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #be4755; }
+  background: #526878; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #7134d7; }
+  background: #dab167; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #77f2e7; }
+  background: #2865da; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #704a8e; }
+  background: #0dcb8a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ef7960; }
+  background: #5648d3; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #ffd027; }
+  background: #aa5f6f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ba78cf; }
+  background: #1529d0; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #65d626; }
+  background: #fdce75; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #8c4039; }
+  background: #395208; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #b8594a; }
+  background: #54f5c4; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #53287e; }
+  background: #c11369; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #156cbb; }
+  background: #1cafc1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #6a9326; }
+  background: #9ff78e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7190b9; }
+  background: #921759; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #eade14; }
+  background: #81c94f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #94f3e7; }
+  background: #12213c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #385873; }
+  background: #104a5a; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #835d23; }
+  background: #70cf66; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c1f65d; }
+  background: #7a41ca; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7fb4e4; }
+  background: #8df00c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #0d824c; }
+  background: #8e57a6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #11da60; }
+  background: #39d2e0; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d4ec96; }
+  background: #d6817f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e5ebc5; }
+  background: #7fcd9f; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #1836f9; }
+  background: #a5baae; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7eb774; }
+  background: #da2505; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6fe984; }
+  background: #ce29d3; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #40d832; }
+  background: #401d99; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #32dfd8; }
+  background: #cfab8a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #d5c59f; }
+  background: #a50b8e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c0a369; }
+  background: #9f2430; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #4327a4; }
+  background: #86663f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8a5465; }
+  background: #8dc471; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #0ccdec; }
+  background: #702f43; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b68f65; }
+  background: #0c670e; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12593,7 +12593,7 @@ td .check-container {
 
 .c-gray-notification {
   padding: 3px;
-  background: #f00f00;
+  background: #808080;
   border-radius: 100%;
   display: block;
   width: 6px;
