--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #1dbc22; }
+  background: #3559f2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #412b3e; }
+  background: #9c2fcb; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #52a04a; }
+  background: #e04c9f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #499a7a; }
+  background: #714552; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e425a4; }
+  background: #1ebdc8; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #39e372; }
+  background: #6fb475; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #45a87e; }
+  background: #6fe213; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #28b8ec; }
+  background: #95417f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #ca190b; }
+  background: #773edb; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b0fec8; }
+  background: #dd49ad; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #85222b; }
+  background: #5cc6db; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a954d1; }
+  background: #80aaa6; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #f667a9; }
+  background: #d5f006; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #53457c; }
+  background: #38a0d4; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #2581a2; }
+  background: #2cbcfb; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #33b52d; }
+  background: #1e8d3a; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #2376d0; }
+  background: #dd5dc0; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #45361c; }
+  background: #7cb768; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #add75f; }
+  background: #3ca240; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #de4eb0; }
+  background: #4fdab1; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #7c7d61; }
+  background: #2ad167; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #f61ff0; }
+  background: #6db0a2; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #0cf308; }
+  background: #fcca5d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4a0623; }
+  background: #b51782; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #087933; }
+  background: #687f5c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7cb4b4; }
+  background: #1ec3bb; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2ea6be; }
+  background: #47ee51; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #a94c16; }
+  background: #906455; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #3049f5; }
+  background: #04ed7a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #2e3102; }
+  background: #e0ef91; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a99af1; }
+  background: #a04a72; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #35b863; }
+  background: #12a023; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3b0426; }
+  background: #f6e661; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d0112a; }
+  background: #2e11e6; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #f468d3; }
+  background: #92667f; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #26181b; }
+  background: #3a41b9; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #23cd3d; }
+  background: #75d143; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #305124; }
+  background: #80cb5a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #91d858; }
+  background: #0aa422; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #98f123; }
+  background: #f72508; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f9b321; }
+  background: #87c06e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e1b27f; }
+  background: #6d46d7; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #ca283f; }
+  background: #2328ee; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #065176; }
+  background: #846ff4; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #6b3c0b; }
+  background: #61a2fe; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b2a850; }
+  background: #a92193; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #63f19b; }
+  background: #b5011d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d72c77; }
+  background: #818bcc; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a6dd37; }
+  background: #1a7ddb; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #50e98e; }
+  background: #f7e2a1; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #637387; }
+  background: #3731dc; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2e0f28; }
+  background: #f3d036; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2d92d4; }
+  background: #cbe190; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9a8aed; }
+  background: #86f890; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #c5e13c; }
+  background: #3704d5; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #9e73d5; }
+  background: #55e696; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a980d8; }
+  background: #8ae4d1; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ed12c9; }
+  background: #60d01a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #235c6d; }
+  background: #42a624; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #e67545; }
+  background: #ecb6c5; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #cf2123; }
+  background: #bffba5; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #4c0291; }
+  background: #fd9e35; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #9ddbfa; }
+  background: #c5f537; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #7ce806; }
+  background: #cd276b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ac6332; }
+  background: #ba0d3d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #526878; }
+  background: #1fc7aa; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #dab167; }
+  background: #4c8f8a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2865da; }
+  background: #7393fe; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0dcb8a; }
+  background: #7e10d7; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5648d3; }
+  background: #8ea866; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #aa5f6f; }
+  background: #132e1d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #1529d0; }
+  background: #ccafa1; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #fdce75; }
+  background: #1c53d9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #395208; }
+  background: #36ebd5; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #54f5c4; }
+  background: #888082; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #c11369; }
+  background: #b247a7; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1cafc1; }
+  background: #733892; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #9ff78e; }
+  background: #0fa88a; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #921759; }
+  background: #987623; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #81c94f; }
+  background: #35fde8; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #12213c; }
+  background: #a9e79a; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #104a5a; }
+  background: #e396be; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #70cf66; }
+  background: #82950e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #7a41ca; }
+  background: #d21f55; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #8df00c; }
+  background: #040780; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #8e57a6; }
+  background: #8a680c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #39d2e0; }
+  background: #fafb3e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d6817f; }
+  background: #4c1480; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7fcd9f; }
+  background: #ae1c5b; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #a5baae; }
+  background: #d6cf8d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #da2505; }
+  background: #d479fe; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #ce29d3; }
+  background: #3b0fa9; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #401d99; }
+  background: #f95027; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #cfab8a; }
+  background: #041f9d; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #a50b8e; }
+  background: #1c702b; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9f2430; }
+  background: #bb227c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #86663f; }
+  background: #dd6cf9; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8dc471; }
+  background: #ecfbc5; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #702f43; }
+  background: #4a593d; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0c670e; }
+  background: #4a883d; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12535,11 +12535,13 @@ td .check-container {
   box-shadow: 0px 5px 7px -1px #c1c1c1;
   padding-bottom: 0px;
   padding: 0px;
-  position: absolute; }
+  position: absolute;
+  border-radius: 0px 0px 6px 6px; }
 
 .notifi-scroll {
-  height: 280px;
-  overflow-y: auto; }
+  height: 390px;
+  overflow-y: auto;
+  border-radius: 0px 0px 6px 6px; }
 
 .dropdown-menu1:before {
   content: "";
@@ -12554,7 +12556,8 @@ td .check-container {
   border-radius: 6px 6px 0px 0px;
   background: #56bcd9; }
   .head a {
-    margin: 0px; }
+    margin: 0px;
+    font-size: 14px; }
 
 .notification-box {
   background: #fff;
@@ -12609,7 +12612,7 @@ td .check-container {
   padding: 3px 6px;
   border-radius: 100%;
   font-size: 13px;
-  border: 1px solid white;
+  border: 1px solid #f00f00;
   position: absolute;
   right: 5px;
   top: -5px; }
