--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2270,7 +2270,7 @@ td {
   padding: 3px 6px;
   border-radius: 100%;
   font-size: 13px;
-  border: 1px solid #f00f00;
+  border: 1px solid white;
   position: absolute;
   right: 5px;
   top: -5px;
