--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #3559f2; }
+  background: #371e4c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9c2fcb; }
+  background: #a8e233; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e04c9f; }
+  background: #ec5d14; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #714552; }
+  background: #248a88; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1ebdc8; }
+  background: #c45d64; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6fb475; }
+  background: #25dddf; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6fe213; }
+  background: #64cf30; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #95417f; }
+  background: #876c9b; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #773edb; }
+  background: #e84dbf; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #dd49ad; }
+  background: #53aa72; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #5cc6db; }
+  background: #081ab5; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #80aaa6; }
+  background: #0dc056; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d5f006; }
+  background: #d5e614; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #38a0d4; }
+  background: #d610c1; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #2cbcfb; }
+  background: #58f0d2; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #1e8d3a; }
+  background: #d8c323; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #dd5dc0; }
+  background: #c9922d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #7cb768; }
+  background: #4117dd; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #3ca240; }
+  background: #f93982; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #4fdab1; }
+  background: #0f9470; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2ad167; }
+  background: #955538; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #6db0a2; }
+  background: #797604; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #fcca5d; }
+  background: #748c78; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #b51782; }
+  background: #885faa; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #687f5c; }
+  background: #923aab; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1ec3bb; }
+  background: #e8645d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #47ee51; }
+  background: #afe285; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #906455; }
+  background: #aaf8c0; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #04ed7a; }
+  background: #43f583; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #e0ef91; }
+  background: #c0042d; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a04a72; }
+  background: #0e5c35; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #12a023; }
+  background: #37d4a5; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #f6e661; }
+  background: #5c587c; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #2e11e6; }
+  background: #0f9d12; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #92667f; }
+  background: #470521; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #3a41b9; }
+  background: #732c94; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #75d143; }
+  background: #5b8dbf; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #80cb5a; }
+  background: #ade444; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #0aa422; }
+  background: #d0b47b; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f72508; }
+  background: #766415; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #87c06e; }
+  background: #9834de; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6d46d7; }
+  background: #bcc44c; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #2328ee; }
+  background: #ab83ca; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #846ff4; }
+  background: #7d238f; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #61a2fe; }
+  background: #250344; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a92193; }
+  background: #922494; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b5011d; }
+  background: #054c19; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #818bcc; }
+  background: #c016af; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #1a7ddb; }
+  background: #fe9968; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #f7e2a1; }
+  background: #1fb56b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #3731dc; }
+  background: #beb3f1; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f3d036; }
+  background: #097f61; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #cbe190; }
+  background: #47dd02; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #86f890; }
+  background: #ddfc10; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #3704d5; }
+  background: #1c9b0d; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #55e696; }
+  background: #f1e39c; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #8ae4d1; }
+  background: #4e0dd0; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #60d01a; }
+  background: #5d62c0; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #42a624; }
+  background: #d83c85; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ecb6c5; }
+  background: #a106de; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #bffba5; }
+  background: #49f40d; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #fd9e35; }
+  background: #2d5893; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #c5f537; }
+  background: #5fd717; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #cd276b; }
+  background: #aa1eb8; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ba0d3d; }
+  background: #455170; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #1fc7aa; }
+  background: #46c6d7; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #4c8f8a; }
+  background: #d92a61; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #7393fe; }
+  background: #6dcc34; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #7e10d7; }
+  background: #1558a1; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #8ea866; }
+  background: #d02441; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #132e1d; }
+  background: #6a23a2; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ccafa1; }
+  background: #e9ffa5; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #1c53d9; }
+  background: #f04268; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #36ebd5; }
+  background: #5d4090; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #888082; }
+  background: #c8bf0f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b247a7; }
+  background: #f0bf7d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #733892; }
+  background: #cb158d; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #0fa88a; }
+  background: #87ac05; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #987623; }
+  background: #a6a4e2; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #35fde8; }
+  background: #e4dedb; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #a9e79a; }
+  background: #63397c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #e396be; }
+  background: #6fc144; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #82950e; }
+  background: #34f726; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d21f55; }
+  background: #5e809f; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #040780; }
+  background: #b5109d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #8a680c; }
+  background: #c8c410; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #fafb3e; }
+  background: #1dab5f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #4c1480; }
+  background: #03d6a9; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ae1c5b; }
+  background: #4efc0c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d6cf8d; }
+  background: #8a6b83; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d479fe; }
+  background: #47fd12; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #3b0fa9; }
+  background: #2ea06a; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #f95027; }
+  background: #365f8f; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #041f9d; }
+  background: #938f38; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #1c702b; }
+  background: #70fb48; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #bb227c; }
+  background: #58a147; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #dd6cf9; }
+  background: #b5e1f6; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ecfbc5; }
+  background: #6e79be; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4a593d; }
+  background: #80fce8; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #4a883d; }
+  background: #862521; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12612,7 +12612,7 @@ td .check-container {
   padding: 3px 6px;
   border-radius: 100%;
   font-size: 13px;
-  border: 1px solid #f00f00;
+  border: 1px solid white;
   position: absolute;
   right: 5px;
   top: -5px; }
